--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-\<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -11,6 +11,7 @@
   <script src="script.js" defer></script>
   <script src="future.js" defer></script>
 </head>
+
 
 <body>
   <div class="card">
@@ -61,7 +62,7 @@
         <tbody>
           <?php
           include ("retrieve.php")?>
-        </div> -->
+        </div>  -->
   
 </body>
 </html>
